<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".Login.RegisterActivity">

    <TextView
        android:text="@string/register"
        android:textSize="30sp"
        android:layout_marginBottom="25sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/lilac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:password="true">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </ProgressBar>
    <Button
        android:id="@+id/btnDaftar"
        android:text="@string/daftar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Button>

    <TextView
        android:id="@+id/LoginNow"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/mulberry"
        android:gravity="center"
        android:text="@string/click_to_login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold">
    </TextView>
</LinearLayout>